--- a/frontEnd.html
+++ b/frontEnd.html
@@ -21,37 +21,37 @@
               <p>Lorem ipsum dolor sit amet, pri elaboraret percipitur ei, wisi dolores accusamus ad mea, sea ei omnesque disputationi. Ad mel ipsum semper sanctus. Petentium ocurreret scribentur mel id, velit delicata te vim. Facer molestie mei no, dignissim honestatis philosophia no nec, maiorum pericula imperdiet usu ad. Est ex amet adhuc euismod.</p>
           </div>
           <div class="logo">
-                <table>
+                <table align="center">
                     <tr>
                         <td>
-                          <img href="logo_pro.png" alt="logo"/>
-                            <h5>Professional</h5>
+                          <img id="logo" href="logo_pro.png" alt="logo"/>
+                            <div id="h5">Proffesional</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
                         <td>
-                          <img href="logo_editable.png" alt="logo"/>
-                            <h5>Editable</h5>
+                          <img id="logo" href="logo_editable.png" alt="logo"/>
+                            <div id="h5">Editable</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
                         <td>
-                          <img href="logo_versatile.png" alt="logo"/>
-                            <h5>Versatile</h5>
+                          <img id="logo" href="logo_versatile.png" alt="logo"/>
+                            <div id="h5">Versatile</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
                     </tr>
               </table>
 
-              <div>
-              <img href="img1.jpg" alt="picture">
+              <div class="left">
+              <img id="pic" href="img1.jpg" alt="picture">
               <article id="side">
                   <h4>Title goes  here.</h4>
-                  <p>Lorem ipsum dolor sit amet, pri elaboraret percipitur ei, wisi dolores accusamus ad mea, sea ei omnesque disputationi.</p>
+                  <p>Lorem ipsum dolor sit amet,<br/> pri elaboraret percipitur ei,<br/> wisi dolores accusamus ad mea,<br/> sea ei omnesque disputationi.</p>
               </article>
           </div>
-          <div>
-              <img href="img2.jpg" alt="picture">
+          <div class="right">
+              <img id="pic" href="img2.jpg" alt="picture">
               <article>
-                  <p>Lorem ipsum dolor sit amet, pri elaboraret percipitur ei, wisi dolores accusamus ad mea, sea ei omnesque disputationi.</p>
+                  <p>Lorem ipsum dolor sit amet,<br/> pri elaboraret percipitur ei, <br/>wisi dolores accusamus ad mea,<br/> sea ei omnesque disputationi.</p>
               </article>
           </div>
           <div id="ad">
