bagged images in one folder and changed their paths on the html document

--- a/frontEnd.html
+++ b/frontEnd.html
@@ -24,17 +24,17 @@
                 <table align="center">
                     <tr>
                         <td>
-                          <img id="logo" href="logo_pro.png" alt="logo"/>
+                          <img id="logo" href="images/logo_pro.png" alt="logo"/>
                             <div id="h5">Proffesional</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
                         <td>
-                          <img id="logo" href="logo_editable.png" alt="logo"/>
+                          <img id="logo" href="images/logo_editable.png" alt="logo"/>
                             <div id="h5">Editable</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
                         <td>
-                          <img id="logo" href="logo_versatile.png" alt="logo"/>
+                          <img id="logo" href="images/logo_versatile.png" alt="logo"/>
                             <div id="h5">Versatile</div>
                             <p>Lorem ipsum dolor sit amet</p>
                         </td>
@@ -42,14 +42,14 @@
               </table>
 
               <div class="left">
-              <img id="pic" href="img1.jpg" alt="picture">
+              <img id="pic" href="images/img1.jpg" alt="picture">
               <article id="side">
                   <h4>Title goes  here.</h4>
                   <p>Lorem ipsum dolor sit amet,<br/> pri elaboraret percipitur ei,<br/> wisi dolores accusamus ad mea,<br/> sea ei omnesque disputationi.</p>
               </article>
           </div>
           <div class="right">
-              <img id="pic" href="img2.jpg" alt="picture">
+              <img id="pic" href="images/img2.jpg" alt="picture">
               <article>
                   <p>Lorem ipsum dolor sit amet,<br/> pri elaboraret percipitur ei, <br/>wisi dolores accusamus ad mea,<br/> sea ei omnesque disputationi.</p>
               </article>
